Lib/AlternateWrapper/NaroOccCore/NaroOccCore/Occ/TopoDS/TopoDS.h

#ifndef TopoDS_H
#define TopoDS_H

#include "../../Export_Import.h"

extern "C" DECL_EXPORT void* TopoDS_Vertex9EBAC0C0(
	void* S);
extern "C" DECL_EXPORT void* TopoDS_Edge9EBAC0C0(
	void* S);
extern "C" DECL_EXPORT void* TopoDS_Wire9EBAC0C0(
	void* S);
extern "C" DECL_EXPORT void* TopoDS_Face9EBAC0C0(
	void* S);
extern "C" DECL_EXPORT void* TopoDS_Shell9EBAC0C0(
	void* S);
extern "C" DECL_EXPORT void* TopoDS_Solid9EBAC0C0(
	void* S);
extern "C" DECL_EXPORT void* TopoDS_CompSolid9EBAC0C0(
	void* S);
extern "C" DECL_EXPORT void* TopoDS_Compound9EBAC0C0(
	void* S);
extern "C" DECL_EXPORT void TopoDS_Dtor(void* instance);

#endif